# ig-haskell

./: .gitignore  README.md  ig-haskell.cabal  ig_creds.json  stack.yaml
src/: IG.hs
src/IG/: REST.hs  Realtime.hs
src/IG/REST/: Accounts.hs  Dealing.hs  Login.hs  Markets.hs  Types.hs
src/IG/REST/Accounts/: Types.hs
src/IG/REST/Dealing/: Types.hs
src/IG/REST/Markets/: Types.hs
src/IG/Realtime/: Types.hs
test/: IGSpec.hs  Tools.hs
test/IG/: RealtimeSpec.hs
test/IG/REST/: DealingSpec.hs  LoginSpec.hs  MarketsSpec.hs
