name:                ig-haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ig-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                     , testScripts
  exposed-modules:     IG
                     , IG.REST
                     , IG.REST.Login
                     , IG.REST.Dealing
                     , IG.REST.Dealing.Types
                     -- All lines below this to be removed for production
                     , LoginScript
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , flow
                     , http-client-tls
                     , http-types
                     , lens
                     , lens-aeson
                     , regex-pcre
                     , scientific
                     , text
                     , time
                     , unordered-containers
                     , wreq
  default-language:    Haskell2010

test-suite ig-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ig-haskell
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ig-haskell
